--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         Tic Tac Toe
     </title>
     <link rel="icon" type="png" href="logo.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
@@ -68,7 +68,7 @@
     <div class="btn"><button>Replay</button></div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 
   <footer>
     <p>Made with <span class="heart">&hearts;</span> by Vineet Srivastava</p>
